services/linkerd-viz/overlays/prod/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-dashboard
  namespace: linkerd-viz
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-traefik-forward-auth@kubernetescrd"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - mesh.k8s.cguertin.dev
    secretName: linkerd-ssl-cert
  rules:
  - host: mesh.k8s.cguertin.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port: 
              name: http
